fixed searchbar - added hidden overflow to the body when modal is open

--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,24 @@
   text-align: center;
 }
 
-#search {
+#searchBar {
   width: 130px;
   box-sizing: border-box;
   border: 2px solid #cccccc;
   border-radius: 4px;
   outline: none;
   font-size: 16px;
-  padding: 10px;
+  padding: 10px 10px 5px 10px;
   margin-top: 50px;
   transition: width 0.4s ease-in-out;
 }
 
-#search:focus {
+#searchBar:focus {
   width: 50%;
+}
+
+@media only screen and (min-width: 576px) {
+  #searchBar:focus {
+    width: 30%;
+  }
 }
