--- a/src/components/ModalProduct.css
+++ b/src/components/ModalProduct.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.85);
+  background-color: rgba(0, 0, 0, 0.75);
 }
 
 .modal-content {
@@ -19,7 +19,6 @@
   max-width: 520px;
   text-align: center;
   box-sizing: border-box;
-  box-shadow: 2px 2px 5px 2px #808080;
 }
 
 .modal-content img {
